vpc.tf
# create vpc
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  instance_tenancy = "default"
  enable_dns_hostnames = true

  tags = {
    Name = "trainium1 vpc"
  }
}

# create an internet gateway and attach it to vpc
resource "aws_internet_gateway" "trainium_igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "trainium1 igw"
  }
}

# create public subnet az1
resource "aws_subnet" "public_subnet_az1" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = var.public_subnet_az1
  availability_zone = "eu-west-2a"
  map_public_ip_on_launch = true

  tags = {
    Name = "public subnet az1"
  }
}

# create public subnet az2
resource "aws_subnet" "public_subnet_az2" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = var.public_subnet_az2
  availability_zone = "eu-west-2b"
  map_public_ip_on_launch = true

  tags = {
    Name = "public subnet az2"
  }
}

# create route table and add public route
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.trainium_igw.id
  }

  tags = {
    Name = "public route table"
  }
}

# associate public subnet az1 to "public route table"
resource "aws_route_table_association" "public_subnet_az1_route_table_association" {
  subnet_id = aws_subnet.public_subnet_az1.id
  route_table_id = aws_route_table.public_route_table.id
}

# associate public subnet az2 to "public route table"
resource "aws_route_table_association" "public_subnet_az2_route_table_association" {
  subnet_id = aws_subnet.public_subnet_az2.id
  route_table_id = aws_route_table.public_route_table.id
}

# create private app subnet az1
resource "aws_subnet" "private_app_subnet_az1" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = var.private_app_subnet_az1
  availability_zone = "eu-west-2a"
  map_public_ip_on_launch = false 

  tags = {
    Name = "private app subnet az1"
  }
}

# create private app subnet az2
resource "aws_subnet" "private_app_subnet_az2" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = var.private_app_subnet_az2
  availability_zone = "eu-west-2b"
  map_public_ip_on_launch = false 

  tags = {
    Name = "private app subnet az2"
  }
}

# create private data subnet az1
resource "aws_subnet" "private_data_subnet_az1" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = var.private_data_subnet_az1
  availability_zone = "eu-west-2a"
  map_public_ip_on_launch = false 

  tags = {
    Name = "private data subnet az1"
  }
}

# create private data subnet az2
resource "aws_subnet" "private_data_subnet_az2" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = var.private_data_subnet_az2
  availability_zone = "eu-west-2b"
  map_public_ip_on_launch = false 

  tags = {
    Name = "private data subnet az2"
  }
}
